# bp.chat

./: .gitignore  Dockerfile  Dockerfile.base  README.md  app.py  chain_module.py  chain_setup.py  docker-compose.yaml  pyproject.toml
.github/workflows/: test_docker_build.yml
chat/: app.py  chain_setup.py
chat_api/: Dockerfile  pyproject.toml
chat_api/src/: main.py
chat_api/src/chains/: chat_assistant.py
chat_api/src/models/: message.py
chat_api/src/utils/: runnables.py
chat_api/tests/: conftest.py  test_chain.py  test_main.py
chat_api/tests/integration/: test_chain_integration.py
tests/: conftest.py  test_chain.py  test_chain_integration.py
tests/integration/: test_chain_integration.py
tests/unit/: conftest.py  test_chain.py  test_interface.py
web/: Dockerfile  pyproject.toml
web/src/: api_client.py  app.py  models.py
web/tests/: conftest.py  test_interface.py
web/tests/integration/: test_backend_integration.py
