[tool.poetry]
name = "llm-experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = {version = "^1.50.2", optional = true}
langchain = {version = "^0.3.1", optional = true}
streamlit = {version = "^1.38.0", optional = true}
langchain-openai = {version = "^0.2.1", optional = true}
langchain-community = {version = "^0.3.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.poetry.extras]
chat_api = [
"openai",
"langchain",
"langchain-openai",
"langchain-community"
]

web = ["streamlit"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
