[tool.poetry]
name = "bp-chat"
version = "0.1.0"
description = "Monorepo for chatbot"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.dependencies.chat_api]
path = "./chat_api"

[tool.poetry.dependencies.web]
path = "./web"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
