[tool.poetry]
name = "chat_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.50.2"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
langchain-community = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"


